chore(be): clear 57 of 58 deprecation warnings — Spring 6.2 rename, JDK 20 URL, deprecated authenticate()
Backend deprecation audit — 3 categories addressed.

Category 1 (55 sites, 16 files): HttpStatus.UNPROCESSABLE_ENTITY was
renamed to UNPROCESSABLE_CONTENT in Spring Framework 6.2 per IETF
RFC 9110's 422 rename. Same status code, same enum instance under the
hood — pure alias. Global sed replacement.

Category 2a (1 site): OAuthController.tryEnvironments no longer calls
the deprecated `apiKeyService.authenticate(String)` (Sprint 50 PR C).
Now calls authenticateDetailed() and filters on kind() == AUTHORIZED,
matching the deprecated wrapper's usable-or-empty semantics exactly.
Non-AUTHORIZED kinds (EXPIRED / ROTATED_EXPIRED / INVALID) all
continue to the next env — no behavior change for the OAuth token-
exchange path.

Category 3 (1 site): PrinterDriver:119 replaced `new URL(String)`
(deprecated in JDK 20) with `URI.create(str).toURL()`.

Skipped (per user scoping decision): the deprecated 2-arg
AuthService.loginUser(LoginRequest, HttpServletResponse) override.
Left for a follow-up because it involves an interface change with
external-caller impact (integration tests use the 2-arg form).

Test updates (OAuthControllerTest, 4 stubs):
- .authenticate(anyString()) → .authenticateDetailed(anyString())
- Optional.empty()          → AuthResult.invalid()
- Optional.of(key)          → new AuthResult(AUTHORIZED, key, false, null)
- verify(never()).authenticate → verify(never()).authenticateDetailed

FE: no deprecation findings (tsc clean, no legacy React patterns, no
deprecated npm packages).

Verification:
- mvn clean compile -Dmaven.compiler.showDeprecation=true: 58 → 1
  warning (only the deliberately-skipped 2-arg loginUser override remains)
- Targeted tests: 75 pass across OAuthController, ApiKeyExpiryAndRotation,
  PrinterDriver, ShippingConfigService, CarrierServiceImpl suites

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>